--- a/src/styles/base/_setings.scss
+++ b/src/styles/base/_setings.scss
@@ -1,8 +1,17 @@
 // Colors
+$dark-grey: #333;
+$grey: #666;
+$dark-blue: #364051;
+$light-blue: #007cc3;
+$off-white: #f7f7f7;
+
+//Font size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 //spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
-$desktop-breakpoint: 45rem;
+$desktop-breakpoint: 46rem;
