--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700&display=swap');
 @import './base/setings';
 @import './base/base';
+@import './components/box-layout';
+@import './components/button';
+@import './components/content-container';
+@import './components/form';
+@import './components/header';
+@import './components/inputs';
+@import './components/input-group';
+@import './components/list';
+@import './components/loader';
+@import './components/page-header';
+@import './components/visibility';
